--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/favicon/palette-solid.svg" type="image/x-icon">
 </head>
-<body>
+<body> 
+  <h1 id="title-text">Color Palette</h1>
   <div class="container">
-    <div class="item item-1">
+     <div class="item item-1">
         <h2>C</h2>
         <p>hex:#352208<br>hex:#d2a87d</p>
     </div>
